2007-06-04  Alexey Shusharin <mrfinch@mail.ru>

	* src/hal_diag.c (cyg_hal_plf_serial_isr): Fixed issue with UART
	ISR handling. Old handler doesn't read the UxIIR register in order
	to clear the interrupt flag. The resulted in endless interrupts
	and the DSR never got to run.

2006-02-03  Sergei Gavrikov <sg@sgs.gomel.by>

	* cdl/hal_arm_lpc2xxx.cdl: Added CYGNUM_HAL_ARM_VECTOR_0x14. That
	gives us a chance to correct a LPC2XXX program signature (ARM
	unused vector at 0x14).  The program signature is the two's
	compliment of the checksum of the ARM7 vector table. Note:
	you can quite overwrite that CDL value in your plf. startup
	code (hal_platform_setup.h).

2006-05-08  Andy Jackson <andy@grapevinetech.co.uk>
 
	* src/lpc2xxx_misc.c: Fixed issue with VPBDIV initialisation on
	non lpc22xx parts code.

2006-05-08  Sergei Gavrikov  <sg@belvok.com>

	* src/lpc2xxx.misc (hal_hardware_init): Call HAL_PLF_HARDWARE_INIT
	for any platform specific initialization.

2006-05-07  Andy Jackson <andy@grapevinetech.co.uk>

	* cdl/hal_arm_lpc2xxx.cdl: Added CYGHWR_HAL_ARM_LPC2XXX_FAMILY,
	CYGNUM_HAL_ARM_LPC2XXX_VPBDIV, CYGNUM_HAL_ARM_LPC2XXX_XCLKDIV
	and CYGHWR_HAL_ARM_LPC2XXX_IDLE_PWRSAVE. Changed 
	CYGHWR_HAL_ARM_LPC2XXX_EXTINT_ERRATA to a bool.
	* include/hal_var_ints.h: Removed lpc2xxx misc functions and
	added an include for lpc2xxx_misc.h to avoid breaking things.
	* include/lpc2xxx_misc.h: New header file for all the lpc2xxx
	miscellaneous functions.
	* include/var_arch.h: Made idle powerdown CDL controlled.
	* include/var_io.h: Changed to use family CDL variables.
	* src/lpc2xxx_misc.c: Changes to interrupt and VPBDIV code.

2004-09-12  Jani Monoses <jani@iv.ro>

	* src/hal_diag.c: 
	* src/lpc2xxx_misc.c: 
	* include/plf_stub.h: 
	* include/var_io.h: 
	* include/var_arch.h: 
	* include/hal_var_ints.h: 
	* include/hal_diag.h: 
	* include/hal_cache.h: 
	* cdl/hal_arm_lpc2xxx.cdl: New port - based on AT91 variant.
